# maya

./: .gitignore  .gitmodules  AudioDetection.py  JoystickConstants.py  NetworkConstants.py  README.md  actuatorControl.py  armDriver.py  audioDetection.py  botServer.py  camListener.py  cam_motor.py  constants.py  deepspeechtest.py  faceDetection_coral.py  inputProcessing.py  main.py  references.txt  requirements.txt  soundCmdListener.py  wakeUp_detect.py
Models/: sheldon_en_raspberry-pi_v2_1_0.ppn
RC_Control/: botServer.py
armControl/: armDriver.py  armDriver2.py  pidController.py  testjitter.py  testthread.py
audio_processing/: audioDetection.py  deepspeechtest.py  model.py  run_model.py  soundCmdListener.py  wakeUp_detect.py
audio_processing/config/: commands_v2.txt
cv/: faceRecognition.py  trackhand.py
lidar_ws/install/: local_setup.sh  setup.sh
lidar_ws/log/: latest_build
rc_Control/: botClient.py  botServer.py  joystick.py
remoteController_client/: botClient.py  joystick.py  testJoystick.py  testclient.py
ros2_ws/src/arm_controller/: package.xml  setup.py
ros2_ws/src/arm_controller/arm_controller/: handTracking.py  jointsMonitor.py
ros2_ws/src/arm_controller/launch/: hand_follow_launch.py
ros2_ws/src/arm_ws/: package.xml  setup.cfg  setup.py
ros2_ws/src/arm_ws/arm_ws/: coordJointClient.py  handTracking.py  jointStateMonitor.py  jointsMonitor.py
ros2_ws/src/inverse_kine/: CMakeLists.txt  package.xml
ros2_ws/src/inverse_kine/src/: xyzToJointsServer.cpp
ros2_ws/src/inverse_kine/srv/: XyzToJoints.srv
(+24 files in other folders)
